# test_mart

./: .env.example  .pre-commit-config.yaml  Database.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1c32fa6169cc_description_default_str.py  26d7eb6660df_initial_schema.py  506cfe3c3805_add_initial_models.py  6d75ae6805b5_add_indexes.py  6d8bd49cc430_add_inventory_log_table.py  9520e6e83743_add_unique_inventory_products.py  d810601f0457_add_initial_models.py  f7e657b9066b_description_for_product.py
app/: config.py  database.py  errors.py  main.py  models.py  schemas.py  services.py
app/core/: config.py
app/routers/: __init__.py  inventory.py  products.py  sales.py
scripts/: demo_data.py  generate_env.py  init_db.sh
tests/: conftest.py  test_models.py  test_pagination_behavior.py
tests/routers/: test_inventory.py  test_products.py  test_sales.py
