[tool.poetry]
name = "test_mart"
version = "0.1.0"
description = "A FastAPI-powered backend for an e-commerce admin dashboard providing sales analytics, revenue insights, and inventory management tools."
authors = ["Waseem Jan <syedwaseemjan@gmail.com>"]
readme = "README.md"
license = "MIT"  # Add if applicable
packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.103.0"
uvicorn = "0.23.2"
pydantic = ">=2.0.0"
requests = ">=2.32.0"
loguru = ">=0.7.0"
alembic = "^1.15.2"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
black = ">=24.3"
autopep8 = ">=2.0.0"
ipdb = ">=0.13.0"
pylint = ">=3.0.0"

[tool.poetry.group.aws.dependencies]
mangum = ">=0.17.0"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"