[tool.poetry]
name = "test_mart"
version = "0.1.0"
description = "A FastAPI-powered backend for an e-commerce admin dashboard providing sales analytics, revenue insights, and inventory management tools."
authors = ["Waseem Jan <syedwaseemjan@gmail.com>"]
readme = "README.md"
license = "MIT"  # Add if applicable
packages = [
    { include = "app", from = "." }
]


[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.103.0"
uvicorn = "0.23.2"
pydantic = ">=2.0.0"
requests = ">=2.32.0"
loguru = ">=0.7.0"
alembic = "^1.15.2"
pymysql = "^1.1.1"
cryptography = "^44.0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
black = ">=24.3"
autopep8 = ">=2.0.0"
ipdb = ">=0.13.0"
pylint = ">=3.0.0"
isort = "^6.0.1"
ruff = "^0.11.10"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.poetry.group.aws.dependencies]
mangum = ">=0.17.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '''
^(
  app/.*\.py
  |tests/.*\.py
)$
'''
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
  |.venv
  |.github
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
src_paths = ["app", "tests"]

[tool.ruff]
src = ["app", "tests"]
include = ["*.py"]
select = [
  "E", "F", "W",  # Basic errors
  "UP",           # Pyupgrade
  "I",            # isort
  "PLC", "PLE",   # Pylint equivalents
]
ignore = ["E501", "I001"]  # Black handles line length
exclude = [
    "alembic/",
    ".venv",
    ".github"
]

[tool.mypy]
files = ["app", "tests"]
strict = true